Added extra credit features

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,8 @@ html, body {
 body {
     font-family: "Nunito", sans-serif;
     text-align: center;
-    background: rgba(235, 235, 235, 0.9);
+    background-color: darkcyan;
+    
 }
 
 header {
@@ -88,10 +89,12 @@ header h1 {
     margin: 10px 10px 20px;
     padding: 10px;
     background: rgba(245, 245, 245, 0.9);
-    border-radius: 0.25em;
-    border: 1px solid rgba(50, 50, 50, 0.3);
+   
     transition: .4s ease-out;
     overflow: hidden;
+
+    box-shadow: 5px 8px cadetblue;
+	border-radius: 15px;
 }
 
 .card-img {
